Preliminary CSS: Add z-index and fixed position for Playlist Modal to cover full view

--- a/app/assets/stylesheets/08-playlist-show.scss
+++ b/app/assets/stylesheets/08-playlist-show.scss
@@ -55,6 +55,7 @@
     align-items: center;
     padding: 0px 0px 0px 30px;
     gap: 25px;
+    overflow: visible;
 }
 
 #playlist-play-button {
