--- a/app/assets/stylesheets/09-playlist-modal.scss
+++ b/app/assets/stylesheets/09-playlist-modal.scss
@@ -1,11 +1,19 @@
 .modal-background {
-    background: rgba(0, 0, 0, 0.258);
+    background: rgba(0, 0, 0, .6);
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 1;
     width: 100vw;
     height: 100vh;
 }
 
 .modal-focus {
     background: red;
+    position: fixed;
+    top: 25%;
+    left: 25%;
+    z-index: 2;
     width: 50vw;
     height: 50vh;
 }
